web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: ns-hiorder
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: frontend
